--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blog-app-mongoose",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "test": "mocha"
@@ -18,6 +18,7 @@
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "faker": "^4.1.0",
-    "mocha": "^3.5.3"
+    "mocha": "^3.5.3",
+    "morgan": "^1.8.2"
   }
 }
